# flake-release-tool

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  flake-release-tool.cabal  flake.nix  release.yaml
.github/workflows/: test.yml
app/: Action.hs  Change.hs  Checks.hs  Config.hs  Foo.hs  Indicator.hs  Main.hs  Obj.hs  ObjCheck.hs  ObjGraph.hs  Sys.hs  Util.hs
nix/: project.nix  shell.nix
