cabal-version:   3.4
name:            flake-release-tool
version:         0.1.0.0
license:         Apache-2.0
license-file:    LICENSE
author:          IOHK
maintainer:      operations@iohk.io
synopsis:        Create software releases from nix projects
description:
  A tool to create software releases from git repos using nix flakes

homepage:        https://github.com/input-output-hk/flake-release-tool
category:        Automation
build-type:      Simple
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/input-output-hk/flake-release-tool

common lang
  default-language:   Haskell2010
  default-extensions:
    ImportQualifiedPost
    OverloadedStrings
    TypeApplications

  ghc-options:        -Wall -Werror

library
  import:         lang
  build-depends:  base ^>=4.18.1.0
  hs-source-dirs: src

executable flake-release-tool
  import:         lang
  main-is:        Main.hs
  other-modules:
    Action
    Change
    Checks
    Config
    Indicator
    Obj
    ObjCheck
    Sys
    Util

  build-depends:
    , attoparsec
    , base                  ^>=4.18.1.0
    , binary
    , bytestring
    , containers
    , data-default
    , extra
    , flake-release-tool
    , HsYAML
    , lens
    , nonempty-containers
    , optparse-applicative
    , prettyprinter
    , text
    , typed-process

  hs-source-dirs: app

test-suite flake-release-tool-test
  import:         lang
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  build-depends:
    , base                ^>=4.18.1.0
    , flake-release-tool
